--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <header>GUIFLIX</header>
+    <section>
+<div class="chamada-texto">
 
 <h1> FRENTISTA FICOU EM CHOQUE COM O GOLZÃO!!🔥 SW4 QUIS ME EMPURRAR  </h1>
 <p>sw4 sofre com o gol 1.6 original que que ta tentando arrunar ai?😂😂😂</p>
